--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ app.sessionRegenerateDestroy = false
 #--------------------------------------------------------------------
 
 database.default.hostname = 'us-cluster-east-01.k8s.cleardb.net'
-database.default.database = 'Luminary Prod' #This is prod
+database.default.database = 'heroku_5bd9dc6f22d57e3' #This is prod
 database.default.username = 'b824db22ce64fd'
 database.default.password = 'fdacd823'
 database.default.DBDriver = MySQLi
