--- a/.env
+++ b/.env
@@ -42,10 +42,10 @@ app.sessionRegenerateDestroy = false
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = 'us-cluster-east-01.k8s.cleardb.net'
-database.default.database = 'heroku_5bd9dc6f22d57e3' #This is prod
-database.default.username = 'b824db22ce64fd'
-database.default.password = 'fdacd823'
+database.default.hostname = 'r1bsyfx4gbowdsis.cbetxkdyhwsb.us-east-1.rds.amazonaws.com'
+database.default.database = 'co3k2xap0r0rftto' #This is prod
+database.default.username = 'vhr4u64orhiezx46'
+database.default.password = 'e1z4r2wf0opm63uw'
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
