--- a/.env
+++ b/.env
@@ -58,6 +58,8 @@ database.default.port = 3306
 # database.tests.DBPrefix =
 # database.tests.port = 3306
 
+
+PAT= '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'
 #--------------------------------------------------------------------
 # CONTENT SECURITY POLICY
 #--------------------------------------------------------------------
