--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@
 
 
 
-app.baseURL = 'https://projectluminary.net'
+app.baseURL = 'https://www.projectluminary.net/'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
